--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <title>Slconcept</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="SL Concept - Pracownia projektowania wnętrz, która łączy w projektach funkcjonalność i estetykę. Oferuję indywidualne projekty mieszkań, domów i przestrzeni komercyjnych, tworząc wyjątkowe wnętrza dopasowane do Twoich potrzeb. Skontaktuj się ze mną już dziś!"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
