--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Slconcept</title>
+    <title>SL Concept</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
@@ -10,6 +10,7 @@
       content="SL Concept - Pracownia projektowania wnętrz, która łączy w projektach funkcjonalność i estetykę. Oferuję indywidualne projekty mieszkań, domów i przestrzeni komercyjnych, tworząc wyjątkowe wnętrza dopasowane do Twoich potrzeb. Skontaktuj się ze mną już dziś!"
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="canonical" href="https://slconcept.pl/" />
   </head>
   <body>
     <app-root></app-root>
