--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="SL Concept - Pracownia projektowania wnętrz, która łączy w projektach funkcjonalność i estetykę. Oferuję indywidualne projekty mieszkań, domów i przestrzeni komercyjnych, tworząc wyjątkowe wnętrza dopasowane do Twoich potrzeb. Skontaktuj się ze mną już dziś!"
+      content=""
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="canonical" href="https://slconcept.pl/" />
