--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       content=""
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="canonical" href="https://slconcept.pl/" />
+    <link rel="canonical" href="https://www.slconcept.pl/" />
   </head>
   <body>
     <app-root></app-root>
