--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="utf-8" />
     <title>SL Concept</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content=""
-    />
+    <meta name="description" content="" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="canonical" href="https://www.slconcept.pl/" />
   </head>
